@@ -1,10 +1,8 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/err/Attic/err-9999.ebuild,v 1.2 2012/06/26 16:51:34 maksbotan Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/err/Attic/err-1.3.0.ebuild,v 1.1 2012/06/26 16:51:34 maksbotan Exp $
 
 EAPI=4
-
-EGIT_REPO_URI="git://github.com/gbin/err.git"
 
 DISTUTILS_SRC_TEST="setup.py"
 
@@ -12,13 +10,13 @@ SUPPORT_PYTHON_ABIS="1"
 PYTHON_DEPEND="2:2.7"
 RESTRICT_PYTHON_ABIS="3.*"
 
-inherit distutils eutils git-2 user
+inherit distutils eutils user
 
 DESCRIPTION="err is a plugin based XMPP chatbot designed to be easily deployable, extensible and maintainable."
 HOMEPAGE="http://gbin.github.com/err/"
 
-SRC_URI=""
-KEYWORDS=""
+SRC_URI="mirror://pypi/e/${PN}/${P}.tar.gz"
+KEYWORDS="~amd64 ~x86"
 LICENSE="GPL-3"
 SLOT="0"
 IUSE="+plugins"
