@@ -10,4 +10,7 @@
 		<email>maksbotan@gentoo.org</email>
 		<name>Maxim Koltsov</name>
 	</maintainer>
+	<use>
+		<flag name="plugins">Enable support for installing plugins with <pkg>dev-vcs/git</pkg></flag>
+	</use>
 </pkgmetadata>
